--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,54 +13,55 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-24 Sat 13:09]
+#+CAPTION: Clock summary at [2016-09-24 Sat 19:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *80:48* |       |       | 100.0 |
+| *Total time*                                                                | *83:30* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 80:48   |       |       | 100.0 |
-| Active                                                                      |         | 80:48 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.8 |
+| Stories                                                                     | 83:30   |       |       | 100.0 |
+| Active                                                                      |         | 83:30 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.7 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
-| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.5 |
+| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.1 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.3 |
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.6 |
-| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.5 |
-| COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.5 |
+| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.4 |
+| COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.6 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.3 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.4 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.9 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.7 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.3 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.1 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  14.9 |
-| COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
-| COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.9 |
-| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.5 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.5 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.1 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.0 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  14.4 |
+| COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.4 |
+| COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.6 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.8 |
+| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.4 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.4 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.9 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.8 |
-| COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.0 |
-| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.4 |
+| COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.3 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   2.9 |
+| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.3 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.6 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.3 |
-| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   2.9 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.8 |
-| COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.6 |
+| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   2.8 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.7 |
+| COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.5 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
-| COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
+| COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.4 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.7 |
-| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.0 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.3 |
+| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.8 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.3 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
 | COMPLETED Add transformer to quilt.cpp                                      |         |       |  1:28 |   1.8 |
-| STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
+| STARTED Add enabler to quilt.cpp                                            |         |       |  2:42 |   3.2 |
+| Add formattable element                                                     |         |       |  0:21 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1205,7 +1206,12 @@ Takes in a =yarn::model= and generates a container of
 
 Add workflow methods to execute the new formattables pipeline.
 
-*** STARTED Add formattable element                                   :story:
+*** STARTED Add enabler to quilt.cpp                                  :story:
+    CLOCK: [2016-09-24 Sat 17:01]--[2016-09-24 Sat 19:43] =>  2:42
+
+Generates the enablement configuration.
+
+*** Add formattable element                                           :story:
     CLOCK: [2016-09-23 Fri 22:02]--[2016-09-23 Fri 22:04] =>  0:02
     CLOCK: [2016-09-23 Fri 20:27]--[2016-09-23 Fri 20:46] =>  0:19
 
@@ -1226,14 +1232,9 @@ Previous understanding:
 - remove formatting context and update formatting workflow to call a
   visitor to resolve the element and then call the formatter.
 - add an enablement map for all formatters in the formatter
-  properties. For example: unordered set of enabled formatters. This
-  is used by assistant for "enabled". We should also populate it with
-  enabled facets so that helpers can determine their status (e.g. io
-  helpers when used from types
 
-*** Remove formatter id                                               :story:
 
-Not clear why we need this given we have formatter name.
+Responsible for computing the inclusion dependencies.
 
 *** Do not compute inclusion directives for system models             :story:
 
@@ -1259,13 +1260,9 @@ need to create a story to clean up the =origin_type= and
 =generation_type= and then we can make use of it to determine if we
 need to compute inclusion, path etc or not.
 
-*** Add includer to quilt.cpp                                         :story:
+*** Remove formatter id                                               :story:
 
-Responsible for computing the inclusion dependencies.
-
-*** Add enabler to quilt.cpp                                          :story:
-
-Generates the enablement configuration.
+Not clear why we need this given we have formatter name.
 
 *** Add filter to quilt.cpp                                           :story:
 
