--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-25 Sun 00:38]
+#+CAPTION: Clock summary at [2016-09-25 Sun 09:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *85:24* |       |       | 100.0 |
+| *Total time*                                                                | *86:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 85:24   |       |       | 100.0 |
-| Active                                                                      |         | 85:24 |       | 100.0 |
+| Stories                                                                     | 86:47   |       |       | 100.0 |
+| Active                                                                      |         | 86:47 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.5 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.5 |
@@ -29,18 +29,18 @@
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.5 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.4 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.6 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.1 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.0 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.3 |
 | CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.6 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.2 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.0 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  14.1 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   2.9 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  13.8 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.4 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.6 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.8 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.7 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.4 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.4 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.7 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.3 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.6 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.7 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.3 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   2.8 |
@@ -48,19 +48,19 @@
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.6 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.2 |
 | COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   2.7 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.6 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.5 |
 | COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.5 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.4 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
-| COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.0 |
-| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.7 |
+| COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   0.9 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  10.9 |
+| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.5 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.2 |
-| COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
+| COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.8 |
 | COMPLETED Add transformer to quilt.cpp                                      |         |       |  1:28 |   1.7 |
-| STARTED Add enabler to quilt.cpp                                            |         |       |  4:36 |   5.4 |
+| COMPLETED Add enabler to quilt.cpp                                          |         |       |  5:59 |   6.9 |
 | Add formattable element                                                     |         |       |  0:21 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1206,7 +1206,9 @@ Takes in a =yarn::model= and generates a container of
 
 Add workflow methods to execute the new formattables pipeline.
 
-*** STARTED Add enabler to quilt.cpp                                  :story:
+*** COMPLETED Add enabler to quilt.cpp                                :story:
+    CLOSED: [2016-09-25 Sun 09:24]
+    CLOCK: [2016-09-25 Sun 08:01]--[2016-09-25 Sun 09:24] =>  1:23
     CLOCK: [2016-09-24 Sat 22:43]--[2016-09-25 Sun 00:37] =>  1:54
     CLOCK: [2016-09-24 Sat 17:01]--[2016-09-24 Sat 19:43] =>  2:42
 
